gtrainlovestory/css/styles.css
/* ... */
  .hero .down-arrow a {
    color: #fff; }
  .hero h1 {
    color: #fff;
    margin-bottom: 200px; }
  .hero p.intro {
    color: #fff;
    font-size: 28px;
    font-weight: 300;
    margin-top: 80px;
  }
  .hero .hero-content {
    padding-top: 26%; }

.navigation {
  -webkit-transition: all 300ms ease-in-out;
          transition: all 300ms ease-in-out;
  position: fixed;
  width: 100%;
  z-index: 999; }

header {
  padding: 10px 0;
  border-bottom: solid 1px rgba(255, 255, 255, 0.2);
  position: relative;
  width: 96%;
  margin: 0 auto;
  -webkit-transition: padding 300ms ease-in-out;
          transition: padding 300ms ease-in-out; }
  header a {
    color: #fff;
    text-transform: uppercase;
    letter-spacing: 0.2em;
    font-size: .75em; }
    header a.login {
      margin-right: 20px; }
  header .logo {
    display: inline-block; }
  header ul.primary-nav {
    margin: 0 0 0 25px;
    padding: 0;
    top: 50%;
    transform: translateY(-50%);
  }
    header ul.primary-nav li {
      display: inline; }
      header ul.primary-nav li a {
        padding-right: 25px; }
        header ul.primary-nav li a:hover {
          color: rgba(71, 228, 194, 1); }
      header ul.primary-nav li:last-child a {
        padding-right: 0px; }
  header ul.member-actions li {
    display: inline; }
    header ul.member-actions li a {
      color: #fff; }
      header ul.member-actions li a:hover {
        color: rgba(71, 228, 194, 1); }
  header .header-nav {
    display: inline-block; }
  header .member-actions {
    position: absolute;
    right: 0;
    top: 50%;
    transform: translateY(-50%);
    -webkit-transition: all 300ms ease-in-out;
            transition: all 300ms ease-in-out; }

.down-arrow {
  color: #fff;
  font-size: 30px;
  position: absolute;
  bottom: 20%;
  left: 50%;
  -webkit-transform: translateX(-50%);
      -ms-transform: translateX(-50%);
          transform: translateX(-50%); }

/* ==========================================================================
Intro
========================================================================== */

.intro span.icon {
  font-size: 40px;
  color: rgba(71, 228, 194, 1);
  font-weight: bold;
}

.intro-icon {
  display: inline-block;
  vertical-align: top;
  padding: 6px 0 0 0;
  margin-right: 20px;
  width: 40px;
}

.intro-content {
  display: inline-block;
  width: 80%;
}

.dickinson, .eliot, .theater {
  width: 80%;
  height: auto;
  padding: 10px;
}

/* ==========================================================================
.blog-intro
========================================================================== */

.blog-intro {
  padding-top: 160px; }
  .blog-intro h3 {
    margin-bottom: 70px; }
  .blog-intro .leftcol {
    padding-right: 100px;
    border-right: solid 1px #E6E9EA; }
  .blog-intro .rightcol {
    padding-left: 100px; }

/* ==========================================================================
.blog
========================================================================== */

.blog {
  padding-bottom: 0;
}

  .blog img {
    width: 100%;
    height: auto;
    -webkit-transition: all 300ms ease-in-out;
    transition: all 300ms ease-in-out;
  }

  .blog h2 {
    font-size: 1em;
    color: #ACB1B4;
    font-weight: 500;
    text-transform: uppercase;
    letter-spacing: 0.2em;
    margin-top: 35px;
  }

  .blog .btn {
    margin-top: 20px;
  }

  .blog .blog-img-wrap {
    position: relative;
    overflow: hidden;
    width: 80%;
    margin: 0 auto;
  }

  .blog .blog-img-wrap:hover img, .blog .blog-img-wrap:focus img {
    -ms-transform: scale(1.1);
    -webkit-transform: scale(1.1);
    transform: scale(1.1); }

  .blog figcaption {
    margin-top: 10px;
  }

  .blog figcaption i {
    margin-left: 5px;
    font-size: 1.5em;
  }

  .blog figcaption p {
    margin-bottom: 0;
    padding-bottom: 10px;
  }

  .blog figcaption a.blog-post-title {
    color: rgba(28, 54, 83, 0.6);
  }

  .blog figcaption a.blog-post-title:hover, .blog figcaption a.blog-post-title:focus {
    color: #3D4351;
  }

/* ==========================================================================
To top
========================================================================== */

.to-top {
  height: 60px;
  background-color: #495061; }
  .to-top .to-top-wrap {
    height: 60px;
    width: 70px;
    position: absolute;
    right: 0;
    text-align: center; }
    .to-top .to-top-wrap a {
      display: block;
      width: 100%;
      height: 100%;
      color: #fff;
      background-color: rgba(0, 0, 0, 0.15); }
    .to-top .to-top-wrap a:hover, .to-top .to-top-wrap a:focus {
      background-color: rgba(0, 0, 0, 0.4); }
    .to-top .to-top-wrap i {
      font-size: 30px;
      line-height: 60px; }
  .to-top .row {
    position: relative; }

/* ==========================================================================
Footer
========================================================================== */

footer {
  background-color: #3D4351;
  position: relative; }
  footer p {
    color: #ACB1B4;
    font-size: 12px; }
  footer a {
    color: #fff; }
  footer a:hover {
    color: rgba(71, 228, 194, 1); }
  footer ul.footer-group {
    border-top: solid 1px #4E566C;
    padding-top: 25px;
    margin-bottom: 45px; }
  footer ul.footer-group li {
    display: inline-block; }
  footer ul.footer-group li a {
    font-size: 10px;
    text-transform: uppercase;
    letter-spacing: 0.2em; }
  footer ul.footer-group li a:hover {
    color: rgba(71, 228, 194, 1); }
  footer ul.footer-group li {
    margin-right: 30px; }
  footer ul.footer-group li:last-child {
    margin-right: 0; }
  footer span.fa-heart {
    color: #ff415c;
    font-size: 15px;
    margin: 0 2px; }
  footer .social-share {
    position: absolute;
    background-color: #373D4A;
    right: 0;
    width: 20%;
    height: 100%;
    padding: 50px 0 0 40px; }
/* ... */

